--- a/_includes/macros/tags.njk
+++ b/_includes/macros/tags.njk
@@ -1,7 +1,7 @@
 {% macro tags(tagList) %}
 Tags: 
 	{%- for tag in tagList | filterTagList %}
-	{%- set tagUrl %}{{ "/tags/" | url }}{{ tag | slugify | title }}/{% endset %}
+	{%- set tagUrl %}{{ "/tags/" | url }}{{ tag | slugify }}/{% endset %}
 	[{{tag}}]({{ tagUrl }}){%- if not loop.last %}, {% endif %}
 	{%- endfor %}
 
