--- a/styles/base.scss
+++ b/styles/base.scss
@@ -24,3 +24,8 @@
     margin-top: 0.3em;
   }
 }
+
+// Allows feedback banner to have correct bottom margin.
+.x-govuk-masthead {
+  margin-top: 0;
+}
