--- a/_includes/layouts/tags.njk
+++ b/_includes/layouts/tags.njk
@@ -1,27 +1,8 @@
-{% extends "base.njk" %}
+{% extends "layouts/tags.njk" %}
 
 {% block beforeContent %}
-  {{ govukBreadcrumbs({
-    classes: "govuk-!-display-none-print",
-    items: breadcrumbItems
-  }) if showBreadcrumbs }}
-{% endblock %}
+  {% import "_includes/macros/feedbackBanner.njk" as feedback %}
+  {{ feedback.phaseBanner() }}
 
-{% block content %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    {{ appDocumentHeader({
-      title: title or "Tags"
-    }) }}
-
-    <ul class="govuk-list govuk-list--bullet">
-      {% for item in collections.tagPages %}
-      <li>
-        <a href="{{ item.url }}">{{ item.data.tag }}</a>
-        ({{ collections[item.data.tag] | length }})
-      </li>
-      {% endfor %}
-    </ul>
-  </div>
-</div>
+  {{ super() }}
 {% endblock %}
