Updated feedback link to open survey in new tab.

--- a/_includes/macros/feedbackBanner.njk
+++ b/_includes/macros/feedbackBanner.njk
@@ -8,7 +8,7 @@
 
 {{ govukPhaseBanner({
   tag: { text: "Alpha" },
-  html: 'This is a new service – your <a class="govuk-link" href="' + feedbackUrl + '">feedback</a> will help us to improve it.'})
+  html: 'This is a new service – your <a class="govuk-link" target="_blank" href="' + feedbackUrl + '">feedback (opens in a new tab)</a> will help us to improve it.'})
 }}
 
 {% endmacro %}
