--- a/styles/base.scss
+++ b/styles/base.scss
@@ -11,16 +11,16 @@
 
   .govuk-header__link, .govuk-header__link:visited {
     color: #15141A;
-    display: inline-flex;
-    align-items: center;
   }
 
-  .govuk-header__product-name {
-    display: inline-block;
-    margin-left: 50px;
+  .govuk-header__logo img {
+    vertical-align: bottom;
   }
 
-  .app-site-search__wrapper {
-    margin-top: 0.3em;
+  .app-site-search {
+    @media (max-width: 62.25em) {
+      width: 100%;
+      margin-bottom: 10px;
+    }
   }
 }
