Phase banner to display if configuration is available.

--- a/_includes/layouts/product.njk
+++ b/_includes/layouts/product.njk
@@ -1,10 +1,12 @@
 {% extends "layouts/product.njk" %}
 
 {% block main %}
-  <div class="govuk-width-container">
-    {% import "_includes/macros/feedbackBanner.njk" as feedback %}
-    {{ feedback.phaseBanner(configuration.phaseBanner) }}
-  </div>
+  {% if configuration.phaseBanner %}
+    <div class="govuk-width-container">
+      {% import "_includes/macros/feedbackBanner.njk" as feedback %}
+      {{ feedback.phaseBanner(configuration.phaseBanner) }}
+    </div>
+  {% endif %}
 
   {{ super() }}
 {% endblock %}
