Added configuration file for feedback banner. (#129)
* Added configuration file for feedback banner.

* Phase banner to display if configuration is available.

* Phase banner configuration moved to .eleventy.js

* Removed phase banner configuration file

--- a/_includes/layouts/sitemap.njk
+++ b/_includes/layouts/sitemap.njk
@@ -1,8 +1,10 @@
 {% extends "layouts/sitemap.njk" %}
 
 {% block beforeContent %}
-  {% import "_includes/macros/feedbackBanner.njk" as feedback %}
-  {{ feedback.phaseBanner() }}
+  {% if phaseBannerConfiguration %}
+    {% import "_includes/macros/feedbackBanner.njk" as feedback %}
+    {{ feedback.phaseBanner(phaseBannerConfiguration) }}
+  {% endif %}
 
   {{ super() }}
 {% endblock %}
