--- a/_includes/layouts/collection.njk
+++ b/_includes/layouts/collection.njk
@@ -1,10 +1,12 @@
 {% extends "layouts/collection.njk" %}
 
 {% block main %}
+  {% if phaseBannerConfiguration %}
   <div class="govuk-width-container">
     {% import "_includes/macros/feedbackBanner.njk" as feedback %}
-    {{ feedback.phaseBanner() }}
+    {{ feedback.phaseBanner(phaseBannerConfiguration) }}
   </div>
+  {% endif %}
 
   {{ super() }}
 {% endblock %}
