--- a/_includes/layouts/tags.njk
+++ b/_includes/layouts/tags.njk
@@ -1,8 +1,10 @@
 {% extends "layouts/tags.njk" %}
 
 {% block beforeContent %}
-  {% import "_includes/macros/feedbackBanner.njk" as feedback %}
-  {{ feedback.phaseBanner() }}
+  {% if phaseBannerConfiguration %}
+    {% import "_includes/macros/feedbackBanner.njk" as feedback %}
+    {{ feedback.phaseBanner(phaseBannerConfiguration) }}
+  {% endif %}
 
   {{ super() }}
 {% endblock %}
