Feedback banner contained within aside landmark element

--- a/_includes/macros/feedbackBanner.njk
+++ b/_includes/macros/feedbackBanner.njk
@@ -3,6 +3,8 @@
 {# Components #}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
 
-{{ govukPhaseBanner(configuration) }}
+<aside>
+  {{ govukPhaseBanner(configuration) }}
+</aside>
 
 {% endmacro %}
