Fixes for product page masthead - Bump govuk-eleventy-plugin to 5.0.3 - Wrap masthead in role - Fix merged macro include

--- a/_includes/layouts/product.njk
+++ b/_includes/layouts/product.njk
@@ -1,4 +1,5 @@
-{% extends "layouts/product.njk" %}
+{% extends "layouts/base.njk" %}
+{# Forked from layouts/product to wrap masthead in region #}
 
 {% block main %}
   {% if phaseBannerConfiguration %}
@@ -8,5 +9,35 @@
     </div>
   {% endif %}
 
+  <section role="region" aria-label="Site description masthead">
+    {{ xGovukMasthead({
+      classes: "x-govuk-masthead--large",
+      title: {
+        html: title | smart
+      } if title,
+      description: {
+        html: description | markdown("inline") | noOrphans
+      } if description,
+      startButton: {
+        href: startButton.href | url,
+        text: startButton.text
+      } if startButton,
+      image: {
+        alt: image.alt,
+        src: image.src | url
+      } if image,
+      breadcrumbs: {
+        classes: "govuk-!-display-none-print govuk-!-margin-bottom-0",
+        items: breadcrumbItems
+      } if showBreadcrumbs
+    }) }}
+  </section>
+
   {{ super() }}
+{% endblock %}
+
+{% block content %}
+  {{ appProseScope(content) if content }}
+
+  {% include "layouts/shared/related.njk" %}
 {% endblock %}
