Added layout for principles and patterns

--- a/_includes/layouts/principle.njk
+++ b/_includes/layouts/principle.njk
@@ -2,5 +2,5 @@
 
 {% block sidebar %}
   {% from "macros/navigationList.njk" import navigationList %}
-  {{ navigationList(page.url, "Standards", collections.getAllStandards) }} 
+  {{ navigationList(page.url, "Principles", collections.getAllPrinciples) }} 
 {% endblock %}
