--- a/_includes/macros/navigationList.njk
+++ b/_includes/macros/navigationList.njk
@@ -5,7 +5,7 @@
     {%- for post in listItems %}
     <li class="x-govuk-sub-navigation__section-item">
       <a href="{{ post.url }}" class="x-govuk-sub-navigation__link" {% if currentUrl == post.url %} aria-current="page"{% endif %}>
-        {{ post.data.title }}
+        {{ post.data.id }} {{ post.data.title }}
       </a>
     </li>
     {%- endfor %}
