--- a/_includes/layouts/collection.njk
+++ b/_includes/layouts/collection.njk
@@ -1,4 +1,4 @@
-{% extends "layouts/collection.njk" %}
+{% extends "layouts/base.njk" %}
 
 {% block main %}
   {% if phaseBannerConfiguration %}
@@ -7,6 +7,52 @@
     {{ feedback.phaseBanner(phaseBannerConfiguration) }}
   </div>
   {% endif %}
+  <section role="region" aria-label="Collection description masthead">
+    {{ xGovukMasthead({
+      title: {
+        html: title | smart
+      } if title,
+      description: {
+        html: description | markdown("inline") | noOrphans
+      } if description
+    }) }}
+  </section>
 
   {{ super() }}
+{% endblock %}
+
+{% block content %}
+<div class="govuk-grid-row">
+  <section class="govuk-grid-column-two-thirds-from-desktop">
+    {{ appProseScope(content) if content }}
+
+    {% if paginationHeading %}
+      <h2 class="govuk-heading-l govuk-!-font-size-27">
+        {{ paginationHeading }}
+      </h2>
+    {% endif %}
+
+    {{ appDocumentList({
+      headingLevel: 3 if paginationHeading else 2,
+      classes: "app-document-list--large",
+      items: pagination.items
+    }) }}
+
+    {{ govukPagination({
+      previous: {
+        href: pagination.href.previous
+      },
+      next: {
+        href: pagination.href.next
+      },
+      items: pagination | itemsFromPagination
+    }) if pagination.pages.length > 1 }}
+  </section>
+
+  {% if aside or related %}
+  <div class="govuk-grid-column-one-third-from-desktop">
+    {% include "layouts/shared/related.njk" %}
+  </div>
+  {% endif %}
+</div>
 {% endblock %}
