Fixed e2e tests. Added new tests to check sidebar links in standards and cookies page

--- a/_includes/layouts/content.njk
+++ b/_includes/layouts/content.njk
@@ -32,7 +32,7 @@
         {% if tags | length %}
           {% from "macros/tagList.njk" import tagList %}
           <br>
-          Relates to (tags): {{ tagList(tags) }}
+          <span class="tags">Relates to (tags): {{ tagList(tags) }}</span>
         {% endif %}
       </p>
 
