--- a/_includes/layouts/collection.njk
+++ b/_includes/layouts/collection.njk
@@ -14,7 +14,11 @@
       } if title,
       description: {
         html: description | markdown("inline") | noOrphans
-      } if description
+      } if description,
+      breadcrumbs: {
+        classes: "govuk-!-display-none-print govuk-!-margin-bottom-0",
+        items: breadcrumbItems
+      } if showBreadcrumbs
     }) }}
   </section>
 
