--- a/_includes/layouts/sitemap.njk
+++ b/_includes/layouts/sitemap.njk
@@ -7,4 +7,8 @@
       {{ feedback.phaseBanner(phaseBannerConfiguration) }}
     </div>
   {% endif %}
+
+  <nav aria-label="Breadcrumbs">
+    {{ super() }}
+  </nav>
 {% endblock %}
