--- a/docs/styles/base.scss
+++ b/docs/styles/base.scss
@@ -25,6 +25,10 @@
   }
 }
 
+.x-govuk-related-navigation .govuk-link[aria-current] {
+  font-weight: bold;
+}
+
 // Allows feedback banner to have correct bottom margin.
 .x-govuk-masthead {
   margin-top: 0;
