Added collection for standards ordered by title Updated content collection names

--- a/_includes/layouts/standard.njk
+++ b/_includes/layouts/standard.njk
@@ -1,6 +1,6 @@
 {% extends "layouts/content.njk" %}
 
 {% block sidebar %}
-  {{ navigationList(page.url, "Standards", collections.getAllStandards) }} 
+  {{ navigationList(page.url, "Standards", collections.getAllStandardsOrderedByID) }} 
   {{ super() }}
 {% endblock %}
