Add page layouts for patterns, principles and standards (#205)
* Added layout for standards

* Added layout for principles and patterns

* Correcting comments

* Added ID into sidebar items for standards

* Layouts will display tags only if there are any tags to display

* Including phase banner in new layouts

* Improved layout for standards page - updated title display

* Using collection view for patterns, principles, and standards overview pages.

* Removed breadcrumbs navigation

* Added descriptions for standards, patterns, and principles. Set tag links for standards, patterns, and principles to navigation to their collection page.

* Changed layout for Provide a good engineering experience principle

* Fixed e2e tests. Added new tests to check sidebar links in standards and cookies page

* Added test to check standards tag goes to collection page

* Added custom pagination control that displays page ID (e.g. SEGAS-00001) for content collection pages

* amend descriptions for patterns, principles and standards landing pages

* removed pagination headings, updated tests and gitignore

* Reinstated breadcrumbs navigation in site.

* Added Engineering principles, patters and standards links into sidebar of collection and content pages

* Added related link to standards collection page

* Updated list a classes in sidebar to match same class used in related links listings

* Updated classes used in sidebar to match related link style

* Updated navigation list classes

* Swapped sidebar navigation items on content pages

* Added CSS rule to bold the current page if link is on sidebar

* Added collection for standards ordered by title

* Updated content collection names

---------

Co-authored-by: edhamiltonHO <92923571+edhamiltonHO@users.noreply.github.com>

--- a/_includes/layouts/collection.njk
+++ b/_includes/layouts/collection.njk
@@ -1,4 +1,4 @@
-{% extends "layouts/collection.njk" %}
+{% extends "layouts/base.njk" %}
 
 {% block main %}
   {% if phaseBannerConfiguration %}
@@ -7,6 +7,60 @@
     {{ feedback.phaseBanner(phaseBannerConfiguration) }}
   </div>
   {% endif %}
+  <section role="region" aria-label="Collection description masthead">
+    {{ xGovukMasthead({
+      title: {
+        html: title | smart
+      } if title,
+      description: {
+        html: description | markdown("inline") | noOrphans
+      } if description,
+      breadcrumbs: {
+        classes: "govuk-!-display-none-print govuk-!-margin-bottom-0",
+        items: breadcrumbItems
+      } if showBreadcrumbs
+    }) }}
+  </section>
 
   {{ super() }}
+{% endblock %}
+
+{% block content %}
+<div class="govuk-grid-row">
+  <section class="govuk-grid-column-two-thirds-from-desktop">
+    {{ appProseScope(content) if content }}
+
+    {% if paginationHeading %}
+      <h2 class="govuk-heading-l govuk-!-font-size-27">
+        {{ paginationHeading }}
+      </h2>
+    {% endif %}
+
+    {% import "macros/contentDocumentList.njk" as documentList %}
+    {{ documentList.contentDocumentList({
+      headingLevel: 3 if paginationHeading else 2,
+      classes: "app-document-list--large",
+      items: pagination.items
+    }) }}
+
+    {{ govukPagination({
+      previous: {
+        href: pagination.href.previous
+      },
+      next: {
+        href: pagination.href.next
+      },
+      items: pagination | itemsFromPagination
+    }) if pagination.pages.length > 1 }}
+  </section>
+
+
+  <div class="govuk-grid-column-one-third-from-desktop">
+    {% from "macros/navigationList.njk" import navigationList %}
+    {{ navigationList(page.url, "Engineering guidance and standards", collections.homepageLinks) }} 
+    {% if aside or related %}
+      {% include "layouts/shared/related.njk" %}
+    {% endif %}
+  </div>
+</div>
 {% endblock %}
