fix population of side nav menu items for that collection

--- a/_includes/layouts/principle.njk
+++ b/_includes/layouts/principle.njk
@@ -1,6 +1,6 @@
 {% extends "layouts/content.njk" %}
 
 {% block sidebar %}
-  {{ navigationList(page.url, "Principles", collections.getAllPrinciples) }} 
+  {{ navigationList(page.url, "Principles", collections.getAllPrinciplesOrderedByTitle) }} 
   {{ super() }}
 {% endblock %}
