--- a/_includes/layouts/sub-navigation.njk
+++ b/_includes/layouts/sub-navigation.njk
@@ -2,13 +2,9 @@
 
 {% block beforeContent %}
   {% if phaseBannerConfiguration %}
-    {% import "macros/feedbackBanner.njk" as feedback %}
-    <div data-axe-exclude="It is acceptable that this is outside a landmark region">
-      {{ feedback.phaseBanner(phaseBannerConfiguration) }}
-    </div>
+    {% import "_includes/macros/feedbackBanner.njk" as feedback %}
+    {{ feedback.phaseBanner(phaseBannerConfiguration) }}
   {% endif %}
 
-  <nav aria-label="Breadcrumbs">
-    {{ super() }}
-  </nav>
+  {{ super() }}
 {% endblock %}
