--- a/_includes/layouts/search-index.njk
+++ b/_includes/layouts/search-index.njk
@@ -1,12 +1,12 @@
 [{% for item in collections.sitemap %}
   {
-    "title": {{ item.data.title | dump | safe }},
+    {% if item.data.id %}"title": {{ (item.data.id + ' - ' + item.data.title) | dump | safe }} {% else %} "title": {{ item.data.title | dump | safe }}{% endif %},
     {% if item.data.description %}"description": {{ item.data.description | dump | safe }},{% endif %}
     {% if item.data.eleventyNavigation.parent %}"section": {{ item.data.eleventyNavigation.parent | dump | safe }},{% endif %}
     "layout": {{ item.data.layout | dump | safe }},
     "hasFrontmatterDate": {{ item.data.date !== undefined }},
     "date": {{ item.date | date("d LLLL y") | dump | safe }},
-    {% if item.data.id %}"templateContent": {{ (item.data.id + ' ' + (item.templateContent | tokenize)) | dump | safe }} {% else %} "templateContent": {{ item.templateContent | tokenize | dump | safe }}{% endif %},
+    "templateContent": {{ item.templateContent | tokenize | dump | safe }},
     "url": {{ item.url | url | pretty | dump | safe }}
   }{% if not loop.last %},{% endif %}
 {% endfor %}]
