--- a/_includes/layouts/tag.njk
+++ b/_includes/layouts/tag.njk
@@ -12,3 +12,29 @@
     {{ super() }}
   </nav>
 {% endblock %}
+
+{% block content %}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    {{ appDocumentHeader({
+      title: title or ("Posts tagged ‘" + tag + "’")
+    }) }}
+
+    {% import "macros/contentDocumentList.njk" as documentList %}
+    {{ documentList.contentDocumentList({
+      headingLevel: 3 if paginationHeading else 2,
+      classes: "app-document-list--large",
+      items: collections[tag] | orderPagesByTitle
+    }) }}
+
+    {{ appProseScope(content) if content }}
+
+  </div>
+  <div class="govuk-grid-column-one-third-from-desktop">
+    {% block sidebar %}
+      {% from "macros/navigationList.njk" import navigationList %}
+      {{ navigationList(page.url, "Engineering guidance and standards", collections.homepageLinks) }}
+    {% endblock %}
+  </div>
+</div>
+{% endblock %}
