--- a/_includes/layouts/tags.njk
+++ b/_includes/layouts/tags.njk
@@ -12,3 +12,36 @@
     {{ super() }}
   </nav>
 {% endblock %}
+
+{% block content %}
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      {{ appDocumentHeader({
+        title: title or "Tags"
+      }) }}
+
+      <ul class="govuk-list govuk-list--bullet">
+       {% for tag in collections.all | getAllTags | filterTagList %}
+        {% if tag == "Patterns" %}
+          {%- set tagUrl %}{{ "/patterns/" | url }}/{% endset %}
+        {% elseif tag == "Principles" %}
+          {%- set tagUrl %}{{ "/principles/" | url }}/{% endset %}
+        {% elseif tag == "Standards" %}
+         {%- set tagUrl %}{{ "/standards" | url }}/{% endset %}
+        {% else %}
+         {%- set tagUrl %}{{ "/tags/" | url }}{{ tag | slugify }}/{% endset %}
+        {% endif %}
+        <li>
+          <a href="{{ tagUrl }}">{{ tag }}</a>
+        </li>
+       {% endfor %}
+      </ul>
+    </div>
+    <div class="govuk-grid-column-one-third-from-desktop">
+      {% block sidebar %}
+        {% from "macros/navigationList.njk" import navigationList %}
+        {{ navigationList(page.url, "Engineering guidance and standards", collections.homepageLinks) }}
+      {% endblock %}
+    </div>
+  </div>
+{% endblock %}
