Removed path prefix usages

--- a/_includes/layouts/collection.njk
+++ b/_includes/layouts/collection.njk
@@ -50,7 +50,7 @@
       next: {
         href: pagination.href.next
       },
-      items: pagination | itemsFromPaginationWithPathPrefix
+      items: pagination | itemsFromPagination
     }) if pagination.pages.length > 1 }}
   </section>
 
