- Added content category (principle/standard/pattern) to docs - Added `displayContentCategory` to content document list macro - allows category to be displayed in collection view - Displaying content category in tag page

--- a/_includes/layouts/tag.njk
+++ b/_includes/layouts/tag.njk
@@ -24,7 +24,8 @@
     {{ documentList.contentDocumentList({
       headingLevel: 3 if paginationHeading else 2,
       classes: "app-document-list--large",
-      items: collections[tag] | orderPagesByTitle
+      items: collections[tag] | orderPagesByTitle,
+      displayContentCategory: true
     }) }}
 
     {{ appProseScope(content) if content }}
