--- a/_includes/layouts/content.njk
+++ b/_includes/layouts/content.njk
@@ -48,7 +48,7 @@
       <p class="govuk-body">
         {% set githubPath = page.filePathStem + '.md' %}
         <a class="version-permalink" href="{{ gitHashPath }}{{githubPath}}" target="_blank">
-          Content version permalink (GitHub) - (opens in a new tab)
+          Content version permalink (GitHub) (opens in a new tab)
         </a>
       </p>
     </div>
