Ensure breadcrumbs have enough space around the link

--- a/docs/styles/base.scss
+++ b/docs/styles/base.scss
@@ -37,3 +37,8 @@
 .govuk-header label.govuk-visually-hidden {
   color: black;
 }
+
+.govuk-breadcrumbs__link {
+  display: inline-block;
+  min-height: 24px;
+}
