Give code blocks lighter background colour to keep contrast ratio accessible when syntax highlighting is used.

--- a/docs/styles/base.scss
+++ b/docs/styles/base.scss
@@ -25,6 +25,10 @@
   }
 }
 
+.x-govuk-code--block {
+  background-color: #f8f8f8;
+}
+
 .x-govuk-related-navigation .govuk-link[aria-current] {
   font-weight: bold;
 }
