Undo background change and use code colour used for inline code spans instead of govuk-red that has 1:4.51 ratio

--- a/docs/styles/base.scss
+++ b/docs/styles/base.scss
@@ -6,6 +6,8 @@
   font-weight: 400;
 }
 
+$x-govuk-code-color: #d13118;
+
 .govuk-header {
   background-color: #f1f1f1;
 
@@ -25,8 +27,9 @@
   }
 }
 
-.x-govuk-code--block {
-  background-color: #f8f8f8;
+.x-govuk-code__string,
+.x-govuk-code__doctag {
+  color: $x-govuk-code-color;
 }
 
 .x-govuk-related-navigation .govuk-link[aria-current] {
