Use full path to xgov-eleventy-plugin layouts to work around 6.7.x template precedence changes

--- a/_includes/layouts/tag.njk
+++ b/_includes/layouts/tag.njk
@@ -1,4 +1,4 @@
-{% extends "layouts/tag.njk" %}
+{% extends "../../node_modules/@x-govuk/govuk-eleventy-plugin/layouts/tag.njk" %}
 
 {% block beforeContent %}
   {% if phaseBannerConfiguration %}
