--- a/_includes/layouts/content.njk
+++ b/_includes/layouts/content.njk
@@ -1,4 +1,4 @@
-{% extends "layouts/base.njk" %}
+{% extends "../../node_modules/@x-govuk/govuk-eleventy-plugin/layouts/base.njk" %}
 
 {% block beforeContent %}
   {% if phaseBannerConfiguration %}
