--- a/_includes/layouts/product.njk
+++ b/_includes/layouts/product.njk
@@ -1,4 +1,4 @@
-{% extends "layouts/product.njk" %}
+{% extends "../../node_modules/@x-govuk/govuk-eleventy-plugin/layouts/product.njk" %}
 
 {#-
 https://github.com/x-govuk/govuk-eleventy-plugin/blob/main/components/header/template.njk#L4-L6
