--- a/_includes/layouts/sitemap.njk
+++ b/_includes/layouts/sitemap.njk
@@ -1,4 +1,4 @@
-{% extends "layouts/sitemap.njk" %}
+{% extends "../../node_modules/@x-govuk/govuk-eleventy-plugin/layouts/sitemap.njk" %}
 
 {% block beforeContent %}
   {% if phaseBannerConfiguration %}
