--- a/_includes/layouts/tags.njk
+++ b/_includes/layouts/tags.njk
@@ -1,4 +1,4 @@
-{% extends "layouts/tags.njk" %}
+{% extends "../../node_modules/@x-govuk/govuk-eleventy-plugin/layouts/tags.njk" %}
 
 {% block beforeContent %}
   {% if phaseBannerConfiguration %}
