Missed layouts/shared/related.njk

--- a/_includes/layouts/shared/related.njk
+++ b/_includes/layouts/shared/related.njk
@@ -1,1 +1,1 @@
-{% extends "layouts/shared/related.njk" %}
+{% extends "../../../node_modules/@x-govuk/govuk-eleventy-plugin/layouts/shared/related.njk" %}
