--- a/docs/standards.json.njk
+++ b/docs/standards.json.njk
@@ -9,7 +9,7 @@ permalink: /standards.json
       "id": "{{ standard.data.id }}",
       "title": "{{ standard.data.title }}",
       "url": "{{ standard.url | prefixWithRoot(siteRoot) }}",
-      "date": "{{ standard.data.date | isoDate }}",
+      "date": "{{ standard.data.date | isoDateOnly }}",
       "tags": {{ standard.data.tags | jsonStringify(2) | indent(6) }},
       "requirements": {{ standard.templateContent | extractRequirements | jsonStringify(2) | indent(6) }}
     }{% if not loop.last %},
