--- a/docs/styles/base.scss
+++ b/docs/styles/base.scss
@@ -72,18 +72,18 @@ body, .govuk-template__body {
 }
 
 // Update contrast to WCAG AA for code blocks
-.x-govuk-code__string,
+.app-code__string,
 .x-govuk-code__doctag {
-  color: #d13118;
+  color: #cb321a;
 }
 
-.x-govuk-code__comment,
-.x-govuk-code__quote {
+.app-code__comment,
+.app-code__quote {
   color: #696e73;
 }
 
-.x-govuk-code__type,
-.x-govuk-code__class .x-govuk-code__title {
+.app-code__type,
+.app-code__class .app-code__title {
   color: #6669a4;
 }
 
