Review of site pages with v8 changes
- Remove pages [generated by virtual templates](https://x-govuk.github.io/govuk-eleventy-plugin/get-started/upgrading/7-to-8/#feature-templates)
- Remove [quotes around blockquotes that are now added by default](https://x-govuk.github.io/govuk-eleventy-plugin/get-started/upgrading/7-to-8/#new-markdown-features)
- Static pages should use page rather than post layout
- Update page layout to include asides on right
- Fix missing gov uk link styles

--- a/_includes/layouts/tag.njk
+++ b/_includes/layouts/tag.njk
@@ -34,7 +34,7 @@
   <div class="govuk-grid-column-one-third-from-desktop">
     {% block sidebar %}
       {% from "macros/navigationList.njk" import navigationList %}
-      {{ navigationList(page.url, "Engineering guidance and standards", collections.homepageLinks) }}
+      {{ navigationList(page.url, "Engineering guidance and standards", homepageLinks) }}
     {% endblock %}
   </div>
 </div>
