--- a/_includes/layouts/tags.njk
+++ b/_includes/layouts/tags.njk
@@ -24,7 +24,7 @@
        {% for tag in collections.all | getAllTags | filterTagList %}
        {%- set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
         <li>
-          <a href="{{ tagUrl }}">{{ tag }}</a>
+          <a class="govuk-link" href="{{ tagUrl }}">{{ tag }}</a>
         </li>
        {% endfor %}
       </ul>
@@ -32,7 +32,7 @@
     <div class="govuk-grid-column-one-third-from-desktop">
       {% block sidebar %}
         {% from "macros/navigationList.njk" import navigationList %}
-        {{ navigationList(page.url, "Engineering guidance and standards", collections.homepageLinks) }}
+        {{ navigationList(page.url, "Engineering guidance and standards", homepageLinks) }}
       {% endblock %}
     </div>
   </div>
