--- a/docs/standards-requirements.njk
+++ b/docs/standards-requirements.njk
@@ -1,6 +1,5 @@
 ---
-eleventyExcludeFromCollections: true
-layout: post
+layout: page
 order: 5
 title: Summary of engineering standards' requirements
 description: An overview of the requirements of all Home Office engineering standards.
@@ -10,8 +9,8 @@ aside:
   content: |
     <p class="govuk-hint">You can download this page in JSON or CSV formats:</p>
 
-    * <a href="/standards.json" download="standards.json">standards.json</a> (<a href="/standards.schema.json" download="standards.schema.json">JSON Schema</a>)
-    * <a href="/standards.csv" download="standards.csv">standards.csv</a>
+    * <a class="govuk-link" href="/standards.json" download="standards.json">standards.json</a> (<a class="govuk-link" href="/standards.schema.json" download="standards.schema.json">JSON Schema</a>)
+    * <a class="govuk-link" href="/standards.csv" download="standards.csv">standards.csv</a>
 ---
 {% for standard in collections.getAllStandardsOrderedByID %}
   <h2 class="app-document-header__title govuk-heading-l">
