Add focus style to header link

--- a/docs/styles/base.scss
+++ b/docs/styles/base.scss
@@ -39,6 +39,11 @@ body, .govuk-template__body {
     color: #0b0c0c;
   }
 
+  .govuk-header__link:focus {
+    background-color: #ffdd00;
+    color: #0b0c0c;
+  }
+
   .govuk-header__logo img {
     vertical-align: bottom;
   }
